Make DataSource Singleton and editing/creating Tasks should work now

--- a/res/layout/activity_edit.xml
+++ b/res/layout/activity_edit.xml
@@ -13,7 +13,8 @@
     <DatePicker
         android:id="@+id/datePicker1"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:calendarViewShown="true" />
 
     <LinearLayout
         android:layout_width="wrap_content"
