--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -18,4 +18,10 @@
         android:layout_height="wrap_content"
         android:text="@string/button_add_title" />
 
+    
+    <Button
+        android:id="@+id/button_account"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/button_account_title" />
 </LinearLayout>
