--- a/res/layout/activity_about.xml
+++ b/res/layout/activity_about.xml
@@ -58,7 +58,7 @@
             android:id="@+id/imageButton3"
             android:layout_width="64dp"
             android:layout_height="64dp"
-            android:src="@drawable/robin" />
+            android:src="@drawable/alex" />
 
         <TextView
             android:id="@+id/tv_alex"
